# libq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _create_makefile  azure-pipelines.yml  libq.qpc  libq.qpc_hash  platform.cpp  platform.h  threadtools.c  threadtools.cpp  threadtools.h
_qpc_scripts/: _default.qpc_base  base_common.qpc
